<resources xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="PluralsCandidate">

    <string name="app_name">Centrum.fm</string>
    <string name="toolbar_default_title">Radio Centrum 98.2 FM</string>
    <string name="action_website">Centrum.fm</string>
    <string name="action_people">Antena\u0020 –\u0020 Dyżury</string>
    <string name="action_share">Udostępnij</string>
    <string name="action_favourite">Polub</string>
    <string name="fragment_news">Aktualności</string>
    <string name="fragment_schedule">Ramówka</string>
    <string name="fragment_favourite">Ulubione</string>
    <string name="share_app_description">Słucham #RadioCentrum (98.2 FM #Lublin) na #Android</string>
    <string name="news_play">odtwarzaj</string>
    <string name="news_external">czytaj dalej</string>
    <string name="news_external_low_density">więcej</string>
    <string name="news_share">udostępnij</string>
    <string name="app_drawer_second">Aplikacja</string>
    <string name="app_songs">Piosenki</string>
    <string name="app_songs_full">Archiwum utworów</string>
    <string name="app_info">Informacje</string>
    <string name="app_settings">Ustawienia</string>
    <string name="error_response">Błąd</string>
    <string name="no_response">Serwer nie odpowiada</string>
    <string name="no_network">Brak internetów. Motyla noga!</string>
    <string name="drawer_open">Otwórz</string>
    <string name="drawer_close">Zamknij</string>
    <string name="fav_list_empty">Pustka i smutek</string>
    <string name="songs_list_empty">Brak danych</string>
    <string name="me_google_play">Google Play</string>
    <string name="email_author">Napisz do autora</string>
    <string name="choose_email_client">Wybierz klienta poczty</string>
    <string name="github">GitHub</string>
    <string name="mobile_restriction">Tryb mobilny zablokowany</string>
    <string name="stream_service">Strumyczek</string>
    <string name="akademickie_rc_umcs">Akademickie Radio Centrum UMCS</string>
    <string name="mobile_connection">Połączenie mobilne</string>
    <string name="wifi_connection">Połączenie Wi-Fi</string>
    <string name="app_intro">Wprowadzenie</string>
    <string name="app_settings_category">Działanie aplikacji</string>
    <string name="mobile_connection_stream_pref">Mobilny streaming</string>
    <string name="mobile_connection_stream_pref_description">Upewnij się, że masz duży pakiet danych</string>
    <string name="number_news_keep_pref">Liczba newsów</string>
    <string name="fav_notifications_pref">Przypomnienia o ulubionych</string>
    <string name="server_status_category">Status serwera</string>
    <string name="indywidualni_server_pref">indywidualni.org/centrum</string>
    <string name="indywidualni_server_ok">Pośrednik jest aktywny\nWersja serwera: %1$s</string>
    <string name="indywidualni_server_not_ok">Błąd pośrednika: %1$d</string>
    <string name="indywidualni_server_failure">Brak połączenia z pośrednikiem</string>
    <string name="nerd_category">Informacje o aplikacji</string>
    <string name="open_source_libraries_pref">Biblioteki open source</string>
    <string name="soon">Niebawem %1$s</string>
    <string name="event_starting">Audycja rozpocznie się za %1$d minut</string>
    <string name="preparing_playback">Zastanawiam się…</string>
    <string name="stream">Strumień</string>
    <string name="audio_focus_problem">System nie pozwala mi dojść do głosu</string>
    <string name="slide_radio">Strumień</string>
    <string name="slide_reader">Newsy</string>
    <string name="slide_songs">Piosenki</string>
    <string name="slide_fav">Ramówka</string>
    <string name="slide_radio_desc">Wysokiej jakości strumień radia. Wygodny widget szybkiego startu odtwarzacza.</string>
    <string name="slide_reader_desc">Czytaj newsy, słuchaj załączniki, udostępniaj treści znajomym. Również offline.</string>
    <string name="slide_songs_desc">Obszerne archiwum historii anteny. Ranking najpopularniejszych utworów i ulubione.</string>
    <string name="slide_fav_desc">Inteligentna ramówka i ulubione audycje. Przypomnienia o lubianych audycjach.</string>
    <string name="show_all_news_pref">Rozwiń wszystkie newsy</string>
    <string name="show_all_news_pref_description">Nie zwijaj newsów, pokaż całe karty</string>
    <string name="high_quality">Wysoka jakość</string>
    <string name="action_play_stop">Odtwarzaj / zatrzymaj</string>
    <string name="widget_broadcast_receiver">Widget Broadcast Receiver</string>
    <string name="widget_quick_play_label">Szybki start</string>
    <string name="played_n_times">Na antenie %1$s razy</string>
    <string name="search">Szukaj</string>
    <string name="songs_show_today">Bieżący dzień</string>
    <string name="songs_info">Informacje</string>
    <string name="action_favourite_song">Dodaj do ulubionych</string>
    <string name="action_unfavourite_song">Usuń z ulubionych</string>
    <string name="action_play_song">Posłuchaj online</string>
    <string name="action_share_song">Udostępnij</string>
    <string name="action_play_song_error">Brak aplikacji do strumieniowania muzyki</string>
    <string name="action_share_song_title">Utwór z anteny Radia Centrum</string>
    <string name="unfaved">Usunięto z ulubionych</string>
    <string name="revert">Cofnij</string>
    <string name="problem_server_response">Problem. Odpowiedź: %1$s</string>
    <string name="action_like_this_song">Polub piosenkę</string>
    <string name="cannot_favourite_song">Brak utworu, wstrzymaj konie</string>
    <string name="songs_current_day">Widok dnia bieżącego</string>
    <string name="songs_given_day">Widok dla %1$s</string>
    <string name="songs_delete_selected">Usuń zaznaczone</string>
    <string name="songs_search_blocked_data">Nie podczas szukania</string>

    <!-- Change log strings -->
    <string name="changelog_full_title">Dziennik zmian</string>
    <string name="changelog_title">Co nowego</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Więcej</string>
    <string name="changelog_version_format">Wersja <xliff:g id="version_name">%s</xliff:g></string>

    <plurals name="eventPrettyLength">
        <item quantity="one">Audycja trwa godzinę</item>
        <item quantity="few">Audycja trwa %d godziny</item>
        <item quantity="other">Audycja trwa %d godzin</item>
    </plurals>

    <plurals name="songs_n_selected">
        <item quantity="one">Jedna piosenka</item>
        <item quantity="few">%d piosenki</item>
        <item quantity="other">%d piosenek</item>
    </plurals>

    <array name="weekdays">
        <item>Niedziela</item>
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
    </array>

    <string-array name="newsPrefTitles">
        <item>Domyślnie</item>
        <item>Więcej</item>
        <item>Mnóstwo</item>
    </string-array>

    <string-array name="reminderPrefTitles">
        <item>Brak przypomnień</item>
        <item>5 minut przed</item>
        <item>10 minut przed</item>
        <item>Kwadrans przed</item>
        <item>Pół godziny przed</item>
    </string-array>

    <array name="archives">
        <item>Historia</item>
        <item>Ulubione</item>
        <item>Toplista</item>
    </array>

    <string name="author_email_address" translatable="false">koras@indywidualni.org</string>
    <string name="google_play_url" translatable="false">https://play.google.com/store/apps/developer?id=Indywidualni</string>
    <string name="github_url" translatable="false">https://github.com/indywidualny/Centrum.fm</string>

</resources>
