<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/fragment_news" />
        <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/fragment_schedule" />
        <item
            android:id="@+id/navigation_favourite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/fragment_favourite" />

        <item
            android:id="@+id/navigation_songs"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/app_songs" />
        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/app_drawer_second">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/navigation_about"
                        android:icon="@drawable/ic_info_black_24dp"
                        android:title="@string/app_info" />
                    <item
                        android:id="@+id/navigation_settings"
                        android:icon="@drawable/ic_settings_black_24dp"
                        android:title="@string/app_settings" />
                </group>
            </menu>
        </item>
    </group>
</menu>