<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_like_this_song"
        android:orderInCategory="0"
        android:title="@string/action_like_this_song"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_people"
        android:orderInCategory="1"
        android:title="@string/action_people"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_website"
        android:orderInCategory="2"
        android:title="@string/action_website"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        app:showAsAction="never" />

</menu>
